--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,18 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  margin-top: 6px;
+  display: flex;
+  gap: 8px;
+}
+
+span {
+  display: block;
+  text-align: center;
+}
+
+.value {
+  font-size: 25px;
+}
